--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "cw-assessment"
 version = "1.0.0"
 edition = "2018"
+description = "CosmWasm test assessment"
+repository = "https://github.com/curest0x1021/cw-assessment"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
