--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,28 @@
 name = "cw-assessment"
 version = "1.0.0"
 edition = "2018"
+authors = ["Compass Hub <curest0x1021@users.noreply.github.com>"]
 description = "CosmWasm test assessment"
 repository = "https://github.com/curest0x1021/cw-assessment"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[profile.release]
+opt-level = 3
+debug = false
+rpath = false
+lto = true
+debug-assertions = false
+codegen-units = 1
+panic = 'abort'
+incremental = false
+overflow-checks = true
+
+[features]
+backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 cosmwasm-std = "0.16.0"
